fixando footer na parte inferior da página

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="text-bg-dark mt-5">
-        <footer class="d-flex flex-wrap justify-content-end align-items-center p-5  border-top text-bg-dark">
+        <footer class="d-flex flex-wrap justify-content-end align-items-center p-5 border-top text-bg-dark fixed-bottom">
           <div class="col-md-4 d-flex align-items-center text-bg-dark d-flex justify-content-end">
               <svg class="bi text-bg-dark" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
             </a>
