--- a/email.html
+++ b/email.html
@@ -35,7 +35,7 @@
         
                             <div style="text-align: center; margin-top: 30px;">
                                 <p style="font-weight: 300; width: 80%; margin: 0 auto;">
-                                    Clique <a href="http://rntintas.bimachine.com.br/login.spr" style="font-weight: bold; font-size: 20px; color:#00D1E6;" target="_blank">AQUI</a> para acessar a plataforma e inserir suas novas credenciais.
+                                    Clique <a href="http://rntintasng.bimachine.com.br/login.spr" style="font-weight: bold; font-size: 20px; color:#00D1E6;" target="_blank">AQUI</a> para acessar a plataforma e inserir suas novas credenciais.
                                 </p>
                             </div>
         
